--- a/common/.config/taskfiles/security/Taskfile.yml
+++ b/common/.config/taskfiles/security/Taskfile.yml
@@ -15,7 +15,10 @@ tasks:
       start: Running `bandit -r run.py`
       success: No security issues found with `bandit`!
     cmds:
-      - poetry run bandit -r run.py
+      - |
+        if [ -f run.py ]; then
+          poetry run bandit -r run.py
+        fi
       - poetry run bandit -r src
 
   dockle:
