--- a/common/.config/taskfiles/upstream/Taskfile.yml
+++ b/common/.config/taskfiles/upstream/Taskfile.yml
@@ -272,6 +272,6 @@ tasks:
           task ansible:update:variables:descriptions
         fi
       - |
-        if [ '{{.REPOSITORY_TYPE' == 'packer' ]; then
+        if [ '{{.REPOSITORY_TYPE}}' == 'packer' ]; then
           task packer:update:variables
         fi
