--- a/common/.config/taskfiles/common/Taskfile-update.yml
+++ b/common/.config/taskfiles/common/Taskfile-update.yml
@@ -12,6 +12,7 @@ tasks:
 
   all:continue:
     deps:
+      - upstream:remotes
       - :git:remotes
       - ':{{if eq .REPOSITORY_SUBTYPE "playbook"}}ansible:playbook:remotes{{else}}donothing{{end}}'
       - all:docs
@@ -276,6 +277,40 @@ tasks:
       - task: :git:update
     status:
       - '[[ "${container:=}" == "docker" ]] || [[ "$SKIP_UPLOADING" == "true" ]]'
+
+  upstream:remotes:
+    deps:
+      - :install:software:jq
+    cmds:
+      - |
+        COUNT="$(jq -r '.blueprint.upstreamRemotes | length' package.json)"
+        for i in $(seq $COUNT); do
+          REMOTE="$(jq --arg count "$i" '.blueprint.upstreamRemotes[$count].remote' package.json)"
+          URL="$(jq --arg count "$i" '.blueprint.upstreamRemotes[$count].url' package.json)"
+          if [ "$REMOTE" != 'null' ] && [ "$URL" != 'null' ]; then
+            git remote add "$REMOTE" "$URL"
+          else
+            .config/log warn '`blueprint.upstreamRemotes` objects should have the `remote`, `url`, and `branch` keys'
+          fi
+        done
+
+  upstream:remotes:pull:
+    deps:
+      - :install:software:jq
+    cmds:
+      - |
+        COUNT="$(jq -r '.blueprint.upstreamRemotes | length' package.json)"
+        for i in $(seq $COUNT); do
+          REMOTE="$(jq --arg count "$i" '.blueprint.upstreamRemotes[$count].remote' package.json)"
+          URL="$(jq --arg count "$i" '.blueprint.upstreamRemotes[$count].url' package.json)"
+          BRANCH="$(jq --arg count "$i" '.blueprint.upstreamRemotes[$count].branch' package.json)"
+          if [ "$REMOTE" != 'null' ] && [ "$URL" != 'null' ] && [ "$BRANCH" != 'null' ]; then
+            git remote add "$REMOTE" "$URL"
+            git pull "$REMOTE" "$BRANCH"
+          else
+            .config/log warn '`blueprint.upstreamRemotes` objects must have the `remote`, `url`, and `branch` keys'
+          fi
+        done
 
   variables:
     deps:
