--- a/common/.config/taskfiles/common/Taskfile-update.yml
+++ b/common/.config/taskfiles/common/Taskfile-update.yml
@@ -281,6 +281,10 @@ tasks:
   upstream:remotes:
     deps:
       - :install:software:jq
+    log:
+      error: Error adding upstream git remotes
+      start: Ensuring upstream git remotes are added (if applicable)
+      success: Successfully added upstream git remotes
     cmds:
       - |
         COUNT="$(jq -r '.blueprint.upstreamRemotes | length' package.json)"
@@ -297,6 +301,10 @@ tasks:
   upstream:remotes:pull:
     deps:
       - :install:software:jq
+    log:
+      error: Error pulling latest from upstream remotes
+      start: Pulling latest changes from upstream remotes
+      success: Successfully pulled latest changes from upstream remotes
     cmds:
       - |
         COUNT="$(jq -r '.blueprint.upstreamRemotes | length' package.json)"
