Update common/start.sh, common/.config/taskfiles/install/Taskfile-software.yml, common/.config/taskfiles/npm/Taskfile.yml

--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -788,6 +788,8 @@ tasks:
           apk --no-cache add {{.PACKAGE}}
         elif type sudo &> /dev/null; then
           sudo apk --no-cache add {{.PACKAGE}}
+        else
+          .config/log warn '`sudo` unavailable and user has no permissions'
         fi
     status:
       - '[ -z "$(which apk)" ]'
@@ -803,6 +805,8 @@ tasks:
         elif type sudo &> /dev/null; then
           sudo apt-get update
           sudo apt-get install -y {{.PACKAGE}}
+        else
+           .config/log warn '`sudo` unavailable and user has no permissions'
         fi
     status:
       - '[ -z "$(which apt-get)" ]'
@@ -816,6 +820,8 @@ tasks:
           dnf install {{.PACKAGE}}
         elif type sudo &> /dev/null; then
           sudo dnf install {{.PACKAGE}}
+        else
+           .config/log warn '`sudo` unavailable and user has no permissions'
         fi
     status:
       - '[ -z "$(which dnf)" ]'
@@ -829,6 +835,8 @@ tasks:
           pacman -S {{.PACKAGE}}
         elif type sudo &> /dev/null; then
           sudo pacman -S {{.PACKAGE}}
+        else
+           .config/log warn '`sudo` unavailable and user has no permissions'
         fi
     status:
       - '[ -z "$(which pacman)" ]'
@@ -842,6 +850,8 @@ tasks:
           yum install -y {{.PACKAGE}}
         elif type sudo &> /dev/null; then
           sudo yum install -y {{.PACKAGE}}
+        else
+           .config/log warn '`sudo` unavailable and user has no permissions'
         fi
     status:
       - '[ -z "$(which yum)" ]'
