--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -71,6 +71,7 @@ tasks:
           if type sudo &> /dev/null && sudo -n true; then
             echo | /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
           else
+            .config/log info 'Attempting to install Homebrew - you may be prompted for your `sudo` password'
             /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
           fi
           if [ '{{.BODEGA}}' != 'true' ]; then
@@ -203,7 +204,7 @@ tasks:
     cmds:
       - .config/log warn "Archlinux support for Homebrew is not very well documented.. if this does not work and you can get it working, please open a PR :)"
       - |
-        if [ "$EUID" -eq 0 ] || (type sudo &> /dev/null && sudo -n true); then
+        if [ "$EUID" -eq 0 ]; then
           pacman update
           pacman -S base-devel curl file git gzip procps-ng
         elif type sudo &> /dev/null; then
@@ -224,7 +225,7 @@ tasks:
     interactive: true
     cmds:
       - |
-        if [ "$EUID" -eq 0 ] || (type sudo &> /dev/null && sudo -n true); then
+        if [ "$EUID" -eq 0 ]; then
           apt-get -y update
           apt-get install -y build-essential curl file git gzip procps
         elif type sudo &> /dev/null; then
@@ -250,7 +251,7 @@ tasks:
           yum grouplist 'Development Tools' &> "$HOME/.config/bodega/yum-devtools-check-ran"
           DEV_TOOLS_NOT_INSTALLED="$(grep 'No groups match' < "$HOME/.config/bodega/yum-devtools-check-ran" > /dev/null)"
           if [[ "$DEV_TOOLS_NOT_INSTALLED" == '0' ]]; then
-            if [ "$EUID" -eq 0 ] || (type sudo &> /dev/null && sudo -n true); then
+            if [ "$EUID" -eq 0 ]; then
               yum groupinstall -y 'Development Tools'
             elif type sudo &> /dev/null; then
               .config/log info 'Attempting to run `sudo yum groupinstall -y "Development Tools"`'
@@ -260,7 +261,7 @@ tasks:
           touch "$HOME/.config/bodega/yum-devtools-check-ran"
         fi
         if ! rpm --quiet --query curl file git gzip procps-ng; then
-          if [ "$EUID" -eq 0 ] || (type sudo &> /dev/null && sudo -n true); then
+          if [ "$EUID" -eq 0 ]; then
             yum install -y curl file git gzip procps-ng
           elif type sudo &> /dev/null; then
             .config/log info 'Attempting to run `sudo yum install -y curl file git procps-ng`'
@@ -271,7 +272,7 @@ tasks:
           source /etc/os-release
           if [[ "$ID" == 'fedora' ]] && [ "$VERSION_ID" -gt "29" ]; then
             if ! rpm --quiet --query libxcrypt-compat; then
-              if [ "$EUID" -eq 0 ] || (type sudo &> /dev/null && sudo -n true); then
+              if [ "$EUID" -eq 0 ]; then
                 yum install -y libxcrypt-compat
               elif type sudo &> /dev/null; then
                 .config/log info 'Attempting to run `sudo yum -y install libxcrypt-compat` (Homebrew dependencies)'
@@ -792,9 +793,12 @@ tasks:
       PACKAGE: '{{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}{{.PACKAGE}}{{end}}'
     cmds:
       - |
-        if [ "$EUID" -eq 0 ] || (type sudo &> /dev/null && sudo -n true); then
+        if [ "$EUID" -eq 0 ]; then
           apk --no-cache add {{.PACKAGE}}
+        elif type sudo &> /dev/null && sudo -n true; then
+          sudo apk --no-cache add {{.PACKAGE}}
         elif type sudo &> /dev/null; then
+          .config/log info 'Running `sudo apk --no-cache add {{.PACKAGE}}`'
           sudo apk --no-cache add {{.PACKAGE}}
         else
           .config/log warn '`sudo` unavailable and user has no permissions'
@@ -807,11 +811,16 @@ tasks:
       PACKAGE: '{{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}{{.PACKAGE}}{{end}}'
     cmds:
       - |
-        if [ "$EUID" -eq 0 ] || (type sudo &> /dev/null && sudo -n true); then
+        if [ "$EUID" -eq 0 ]; then
           apt-get update
           apt-get install -y {{.PACKAGE}}
-        elif type sudo &> /dev/null; then
+        elif type sudo &> /dev/null && sudo -n true; then
           sudo apt-get update
+          sudo apt-get install -y {{.PACKAGE}}
+        elif type sudo &> /dev/null; then
+          .config/log info 'Running `sudo apt-get update`'
+          sudo apt-get update
+          .config/log info 'Running `sudo apt-get install -y {{.PACKAGE}}`'
           sudo apt-get install -y {{.PACKAGE}}
         else
            .config/log warn '`sudo` unavailable and user has no permissions'
@@ -824,9 +833,12 @@ tasks:
       PACKAGE: '{{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}{{.PACKAGE}}{{end}}'
     cmds:
       - |
-        if [ "$EUID" -eq 0 ] || (type sudo &> /dev/null && sudo -n true); then
+        if [ "$EUID" -eq 0 ]; then
           dnf install {{.PACKAGE}}
+        elif type sudo &> /dev/null && sudo -n true; then
+          sudo dnf install {{.PACKAGE}}
         elif type sudo &> /dev/null; then
+          .config/log info 'Running `sudo dnf install {{.PACKAGE}}`'
           sudo dnf install {{.PACKAGE}}
         else
            .config/log warn '`sudo` unavailable and user has no permissions'
@@ -839,9 +851,12 @@ tasks:
       PACKAGE: '{{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}{{.PACKAGE}}{{end}}'
     cmds:
       - |
-        if [ "$EUID" -eq 0 ] || (type sudo &> /dev/null && sudo -n true); then
+        if [ "$EUID" -eq 0 ]; then
           pacman -S {{.PACKAGE}}
+        elif type sudo &> /dev/null && sudo -n true; then
+          sudo pacman -S {{.PACKAGE}}
         elif type sudo &> /dev/null; then
+          .config/log info 'Running `sudo pacman -S {{.PACKAGE}}`'
           sudo pacman -S {{.PACKAGE}}
         else
            .config/log warn '`sudo` unavailable and user has no permissions'
@@ -854,9 +869,12 @@ tasks:
       PACKAGE: '{{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}{{.PACKAGE}}{{end}}'
     cmds:
       - |
-        if [ "$EUID" -eq 0 ] || (type sudo &> /dev/null && sudo -n true); then
+        if [ "$EUID" -eq 0 ]; then
           yum install -y {{.PACKAGE}}
+        elif type sudo &> /dev/null && sudo -n true; then
+          sudo yum install -y {{.PACKAGE}}
         elif type sudo &> /dev/null; then
+          .config/log info 'Running `sudo yum install -y {{.PACKAGE}}`'
           sudo yum install -y {{.PACKAGE}}
         else
            .config/log warn '`sudo` unavailable and user has no permissions'
