--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -204,7 +204,7 @@ tasks:
     cmds:
       - .config/log warn "Archlinux support for Homebrew is not very well documented.. if this does not work and you can get it working, please open a PR :)"
       - |
-        if [ "$EUID" -eq 0 ]; then
+        if [ "$USER" == "root" ]; then
           pacman update
           pacman -S base-devel curl file git gzip procps-ng
         elif type sudo &> /dev/null; then
@@ -225,7 +225,7 @@ tasks:
     interactive: true
     cmds:
       - |
-        if [ "$EUID" -eq 0 ]; then
+        if [ "$USER" == "root" ]; then
           apt-get -y update
           apt-get install -y build-essential curl file git gzip procps
         elif type sudo &> /dev/null; then
@@ -251,7 +251,7 @@ tasks:
           yum grouplist 'Development Tools' &> "$HOME/.config/bodega/yum-devtools-check-ran"
           DEV_TOOLS_NOT_INSTALLED="$(grep 'No groups match' < "$HOME/.config/bodega/yum-devtools-check-ran" > /dev/null)"
           if [[ "$DEV_TOOLS_NOT_INSTALLED" == '0' ]]; then
-            if [ "$EUID" -eq 0 ]; then
+            if [ "$USER" == "root" ]; then
               yum groupinstall -y 'Development Tools'
             elif type sudo &> /dev/null; then
               .config/log info 'Attempting to run `sudo yum groupinstall -y "Development Tools"`'
@@ -261,7 +261,7 @@ tasks:
           touch "$HOME/.config/bodega/yum-devtools-check-ran"
         fi
         if ! rpm --quiet --query curl file git gzip procps-ng; then
-          if [ "$EUID" -eq 0 ]; then
+          if [ "$USER" == "root" ]; then
             yum install -y curl file git gzip procps-ng
           elif type sudo &> /dev/null; then
             .config/log info 'Attempting to run `sudo yum install -y curl file git procps-ng`'
@@ -272,7 +272,7 @@ tasks:
           source /etc/os-release
           if [[ "$ID" == 'fedora' ]] && [ "$VERSION_ID" -gt "29" ]; then
             if ! rpm --quiet --query libxcrypt-compat; then
-              if [ "$EUID" -eq 0 ]; then
+              if [ "$USER" == "root" ]; then
                 yum install -y libxcrypt-compat
               elif type sudo &> /dev/null; then
                 .config/log info 'Attempting to run `sudo yum -y install libxcrypt-compat` (Homebrew dependencies)'
@@ -793,7 +793,7 @@ tasks:
       PACKAGE: '{{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}{{.PACKAGE}}{{end}}'
     cmds:
       - |
-        if [ "$EUID" -eq 0 ]; then
+        if [ "$USER" == "root" ]; then
           apk --no-cache add {{.PACKAGE}}
         elif type sudo &> /dev/null && sudo -n true; then
           sudo apk --no-cache add {{.PACKAGE}}
@@ -811,7 +811,7 @@ tasks:
       PACKAGE: '{{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}{{.PACKAGE}}{{end}}'
     cmds:
       - |
-        if [ "$EUID" -eq 0 ]; then
+        if [ "$USER" == "root" ]; then
           apt-get update
           apt-get install -y {{.PACKAGE}}
         elif type sudo &> /dev/null && sudo -n true; then
@@ -833,7 +833,7 @@ tasks:
       PACKAGE: '{{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}{{.PACKAGE}}{{end}}'
     cmds:
       - |
-        if [ "$EUID" -eq 0 ]; then
+        if [ "$USER" == "root" ]; then
           dnf install {{.PACKAGE}}
         elif type sudo &> /dev/null && sudo -n true; then
           sudo dnf install {{.PACKAGE}}
@@ -851,7 +851,7 @@ tasks:
       PACKAGE: '{{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}{{.PACKAGE}}{{end}}'
     cmds:
       - |
-        if [ "$EUID" -eq 0 ]; then
+        if [ "$USER" == "root" ]; then
           pacman -S {{.PACKAGE}}
         elif type sudo &> /dev/null && sudo -n true; then
           sudo pacman -S {{.PACKAGE}}
@@ -869,7 +869,7 @@ tasks:
       PACKAGE: '{{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}{{.PACKAGE}}{{end}}'
     cmds:
       - |
-        if [ "$EUID" -eq 0 ]; then
+        if [ "$USER" == "root" ]; then
           yum install -y {{.PACKAGE}}
         elif type sudo &> /dev/null && sudo -n true; then
           sudo yum install -y {{.PACKAGE}}
