--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -295,7 +295,11 @@ tasks:
         else
           bash <(curl -sSL {{.INIT_SCRIPT}})
         fi
-      - git push origin master
+      - task: ci:commit
+      - |
+        if [ -z "$CI" ]; then
+          task ci:synchronize
+        fi
 
   lint:
     desc: Lints the project using all linters
