--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -300,6 +300,7 @@ tasks:
         if [ -z "$CI" ]; then
           task ci:synchronize
         fi
+      - echo "TESTINGGGG"
 
   lint:
     desc: Lints the project using all linters
