--- a/common/.config/taskfiles/ci/Taskfile.yml
+++ b/common/.config/taskfiles/ci/Taskfile.yml
@@ -155,3 +155,5 @@ tasks:
             "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/trigger/pipeline"
         fi
       - git checkout master
+    status:
+      - '[ -n "$CI" ]'
