--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,11 +1,14 @@
 ---
 version: '3'
+
 includes:
   ansible: ./.config/taskfiles/ansible/Taskfile.yml
   ansible:ansibler: ./.config/taskfiles/ansible/Taskfile-ansibler.yml
   ansible:playbook: ./.config/taskfiles/ansible/Taskfile-playbook.yml
   ansible:populate: ./.config/taskfiles/ansible/Taskfile-populate.yml
   ansible:test: ./.config/taskfiles/ansible/Taskfile-test.yml
+  app: ./.config/taskfiles/app/Taskfile.yml
+  app:virtualbox: ./.config/taskfiles/app/Taskfile-virtualbox.yml
   boilerplate: ./.config/taskfiles/boilerplate/Taskfile.yml
   boilerplate:populate: ./.config/taskfiles/boilerplate/Taskfile-populate.yml
   boilerplate:prompt: ./.config/taskfiles/boilerplate/Taskfile-prompt.yml
@@ -43,6 +46,7 @@ includes:
   log: ./.config/taskfiles/log/Taskfile.yml
   nest: ./.config/taskfiles/nest/Taskfile.yml
   npm: ./.config/taskfiles/npm/Taskfile.yml
+  npm:bundle: ./.config/taskfiles/npm/Taskfile-bundle.yml
   npm:cov: ./.config/taskfiles/npm/Taskfile-cov.yml
   npm:doc: ./.config/taskfiles/npm/Taskfile-doc.yml
   packer: ./.config/taskfiles/packer/Taskfile.yml
@@ -62,30 +66,40 @@ includes:
   release: ./.config/taskfiles/release/Taskfile.yml
   security: ./.config/taskfiles/security/Taskfile.yml
   symlink: ./.config/taskfiles/symlink/Taskfile.yml
+  update: ./.config/taskfiles/update/Taskfile.yml
   upstream: ./.config/taskfiles/upstream/Taskfile.yml
   upstream:common: ./.config/taskfiles/upstream/Taskfile-common.yml
   upstream:commondocs: ./.config/taskfiles/upstream/Taskfile-commondocs.yml
   upstream:docs: ./.config/taskfiles/upstream/Taskfile-docs.yml
   upstream:project: ./.config/taskfiles/upstream/Taskfile-project.yml
   upstream:shared: ./.config/taskfiles/upstream/Taskfile-shared.yml
+  vagrant: ./.config/taskfiles/vagrant/Taskfile.yml
   vscode: ./.config/taskfiles/vscode/Taskfile.yml
   web: ./.config/taskfiles/web/Taskfile.yml
   web:ionic: ./.config/taskfiles/web/Taskfile-ionic.yml
   web:nx: ./.config/taskfiles/web/Taskfile-nx.yml
   web:profile: ./.config/taskfiles/web/Taskfile-profile.yml
+
 output: interleaved
+
 vars:
   DOCKERHUB_PROFILE: megabytelabs
   DOCKERHUB_USER: professormanhattan
-  ESLINT_FORMATTER: pretty
+  ESLINT_FIX_RECURSIVE: 'true'
+  ESLINT_FORMATTER: stylish
   ESLINT_FORMATTER_OPTIONS: git-log gitlab pretty summary
   GITHUB_ORG: ProfessorManhattan
   GITHUB_USER: ProfessorManhattan
   GROUP_EXEC_ASYNC: 'false'
-  IGNORE_FOLDERS: -path './.autodoc/*' -o -path './.cache/*' -o -path './.common*' -o -path './.config/*' -o -path './.git/*' -o -path './.github/*' -o -path './.gitlab/*' -o -path './.husky/*' -o -path './.modules/*' -o -path './.npm/*' -o -path './.pnpm-store/*' -o -path './.shared/*' -o -path './.task/*' -o -path './.venv/*' -o -path './.vscode/*' -o -path './build/*' -o -path './dist/*' -o -path './node_modules/*' -o -path './roles/*' -o -name pnpm-lock.yaml -o -name package-lock.json -o -name poetry.lock -o -name '.variables.json'
+  IGNORE_FOLDERS: -path './.autodoc/*' -o -path './.cache/*' -o -path './.common*' -o -path './.config/*' -o -path './.git/*'
+    -o -path './.github/*' -o -path './.gitlab/*' -o -path './.husky/*' -o -path './.modules/*' -o -path './.npm/*'
+    -o -path './.pnpm-store/*' -o -path './.shared/*' -o -path './.task/*' -o -path './.venv/*' -o -path './.vscode/*'
+    -o -path './build/*' -o -path './dist/*' -o -path './node_modules/*' -o -path './roles/*' -o -name pnpm-lock.yaml
+    -o -name package-lock.json -o -name poetry.lock -o -name '.variables.json'
   INIT_SCRIPT: https://gitlab.com/megabyte-labs/gitlab-ci/-/raw/master/scripts/update-init.sh
   LOG_FIX:
     sh: chmod +x .config/log && echo "heyhey"
+  MODEL_TASKFILE: https://gitlab.com/megabyte-labs/common/shared/-/raw/master/Taskfile.yml
   NPM_KEEP_UPDATED: glob
   NPM_PROGRAM: npm
   NPM_PROGRAM_LOCAL: pnpm
@@ -98,8 +112,18 @@ vars:
   REPOSITORY_TYPE: common
   SEMANTIC_CONFIG: semantic-release-config
   TIMEZONE: America/New_York
+
 env:
+  OSTYPE:
+    sh: |
+      {{if (eq OS "linux")}}LINUX_FLAVOR='linux-gnu'
+      LIBC=$(ldd /bin/ls | grep 'musl' | head -1 | cut -d ' ' -f1)
+      if [ -n "$LIBC" ]; then LINUX_FLAVOR='linux-musl'; fi{{end}}
+      echo "{{if (eq OS "linux")}}$LINUX_FLAVOR{{else}}darwin{{end}}"
+  RECORD_INSTALL:
+    sh: test -n "$CI" && echo "true" || true
   SENTRY_DSN: ''
+
 profile: |
   PATH="$PATH:$HOME/.local/bin:$HOME/.poetry/bin"
   if [[ "$OSTYPE" == 'linux-gnu'* ]] || [[ "$OSTYPE" == 'linux-musl'* ]]; then
@@ -119,6 +143,7 @@ profile: |
   if [ -f .venv/bin/activate ]; then
     . .venv/bin/activate
   fi
+
 tasks:
   build:
     deps:
@@ -143,6 +168,7 @@ tasks:
         else
           [[ $- == *i* ]] && task prepare || (.config/log error '{{.NONINTERACTIVE_MISSING_BUILD_CMD}}' && exit 1)
         fi
+
   clean:
     desc: Removes optional folders that are cached during various tasks
     summary: |
@@ -153,11 +179,13 @@ tasks:
       which will re-generate the project from scratch. Ideally, this task and the reset task
       should never be necessary. The `start` task should be used instead.
     vars:
-      CLEAN_TARGETS: .autodoc .cache .task .venv node_modules tsconfig.tsbuildinfo venv .variables.json
+      CLEAN_TARGETS: .autodoc .cache .task .venv node_modules tsconfig.tsbuildinfo venv
+        .variables.json
     cmds:
       - task: common:clean
         vars:
           CLEAN_TARGETS: '{{.CLEAN_TARGETS}}'
+
   commit:
     desc: Lint staged files, report spelling errors, and open a _required_ commit dialoge
     summary: |
@@ -174,6 +202,7 @@ tasks:
       to your regular `git commit -m` command to bypass the pre-commit hook.
     cmds:
       - task: common:commit
+
   commit:all:
     deps:
       - install:software:git
@@ -209,7 +238,15 @@ tasks:
         git add --all
         git commit
         {{end}}
+
+  commit:quick:
+    cmds:
+      - git add --all
+      - HUSKY=0 git commit -m '🔧 chore(tweak): quick minor update' --no-verify
+      - git push origin master
+
   donothing: 'true'
+
   fix:
     desc: Run code auto-fixers / auto-formatters
     summary: |
@@ -220,6 +257,20 @@ tasks:
       an error so the auto-fixes still have to be validated.
     cmds:
       - task: fix:all
+
+  get:links:
+    deps:
+      - install:software:jq
+    desc: Log useful links such as the current project's git repository link
+    vars:
+      GITHUB_URL:
+        sh: jq -r '.blueprint.repository.github' package.json
+      GITLAB_URL:
+        sh: jq -r '.blueprint.repository.gitlab' package.json
+    cmds:
+      - .config/log info 'GitHub -----> `{{.GITHUB_URL}}`'
+      - .config/log info 'GitLab -----> `{{.GITLAB_URL}}`'
+
   group:exec:
     desc: Execute group commands on any GitLab group (including repositories in sub-groups)
     summary: |
@@ -240,6 +291,7 @@ tasks:
       Be sure to wrap the command in quotes or you might observe some odd behavior.
     cmds:
       - task: git:gitlab:group:exec
+
   init:
     deps:
       - install:software:jq
@@ -272,17 +324,18 @@ tasks:
     cmds:
       - git init
       - |
+        TMP="$(mktemp)" && curl -sSL {{.MODEL_TASKFILE}} > "$TMP"
+        .config/log info 'Ensuring new additions to the model `Taskfile.yml` are present in the project `Taskfile.yml`'
+        yq eval-all -i 'select(fileIndex == 0) * select(fileIndex == 1)' "$TMP" Taskfile.yml
+      - |
         if [ -n "$UPDATE_INIT_SCRIPT" ]; then
           bash <(curl -sSL "$UPDATE_INIT_SCRIPT")
         else
           bash <(curl -sSL {{.INIT_SCRIPT}})
         fi
       - task: ci:commit
-      - |
-        if [ -z "$CI" ]; then
-          task ci:synchronize
-        fi
-      - echo "TESTINGGGG"
+      - task: ci:synchronize
+
   lint:
     desc: Lints the project using all linters
     summary: |
@@ -296,6 +349,7 @@ tasks:
       `task lint`
     cmds:
       - task: lint:all
+
   livereload:
     deps:
       - install:npm:nodemon
@@ -335,9 +389,13 @@ tasks:
           .config/log error '`Taskfile-project.yml` must exist and have a `livereload` task to use with `nodemon`' && exit 1
         fi
       - nodemon --config {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.config/nodemon.json{{end}}
+
+  new:project:
+    desc: Create a new project
+    cmds:
+      - task: prepare
+
   preload:
-    deps:
-      - install:brewfile
     desc: Set up your workstation in advance by installing commonly used programs
     summary: |
       # Speed Up Future Development by Preloading Common System Applications
@@ -370,8 +428,14 @@ tasks:
       success: Successfully preloaded system with common dependencies (REBOOT RECOMMENDED)
     cmds:
       - task: install:brewfile
-      - task: install:modules:global
-      - task: install:pipx:global
+      - task: install:go:bundle
+      - task: install:rust:bundle
+      - task: install:github:bundle
+      - task: install:npm:bundle
+      - task: install:pipx:bundle
+      - task: install:python:requirements
+      - task: install:modules:local
+
   prepare:
     desc: Prepares the project for the normal start command
     summary: |
@@ -388,6 +452,114 @@ tasks:
     cmds:
       - task: boilerplate:check:package
       - task: boilerplate:clean
+
+  publish:
+    desc: Publish a semantic release via `semantic-release`
+    summary: |
+      # Publish the Project
+
+      Using this task, you can publish a project to all its targets. The targets
+      depend on the project type. Most projects will include:
+
+      1. Updating version numbers in `package.json`, `pyproject.toml`, etc.
+      2. Adding a new git tag at the version and publishing it with updated assets
+      3. Publishing repository-specific items like NPM packages, PyPi packages, etc.
+      4. Publishing artifacts to GitLab Releases and GitHub Releases
+      5. Updating the `docs/CHANGELOG.md`
+
+      ## Packages Used
+
+      This task runs `semantic-release` using the `semantic-release-config` package. The package
+      includes release instructions for:
+
+      1. Python packages
+      2. NPM packages
+      3. Dockerfile projects
+      4. Go projects
+      5. Ansible roles
+
+      ## Formats
+
+      It does its best to ship projects out in as many formats (that make sense) as possible.
+      For instance, an NPM CLI gets published as:
+
+      1. NPM package
+      2. Binaries (including deb and rpm) available on GitHub/GitLab releases
+      3. Brew formulae
+      4. Snapcraft
+      5. Probably more implemented after writing this
+
+      ## Python Package Notes
+
+      If `setup.cfg` is present, then the project is assumed to be a legacy Python
+      project that needs to run in environment with access to the `python-semantic`
+      extras defined in `pyproject.toml`.
+    log:
+      error: Error running `semantic-release` via `task publish`
+      start: Running `semantic-release` via `task publish`
+      success: Successfully ran `semantic-release` via `task publish`
+    cmds:
+      - task: publish:semantic-release
+
+  publish:force:
+    desc: Force a `semantic-release` even if there are no new eligible commits
+    summary: |
+      # Force a Release with Empty Commit
+
+      Trigger any kind of version bump / semantic release by passing
+      `PATCH UPDATE`, `MINOR UPDATE`, or `MAJOR UPDATE` in via CLI arguments.
+      This task will commit an empty commit message that will trigger the
+      corresponding version bump type.
+
+      **Example of patch update:**
+      `task publish:force -- 'PATCH UPDATE'`
+
+      **Example of minor update:**
+      `task publish:force -- 'MINOR UPDATE'`
+
+      **Example of major update:**
+      `task publish:force -- 'MAJOR UPDATE'`
+    vars:
+      UPDATE_LEVEL: '{{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}PATCH UPDATE{{end}}'
+    log:
+      error: Error creating update via `task publish:force`
+      start: Publishing `semantic-release` update via `task publish:force`
+      success: Successfully published update via `task publish:force`
+    cmds:
+      - |
+        HUSKY=0 git commit -a --allow-empty -m '🔨 build(version bump): semantic-release {{.UPDATE_LEVEL}}' -n
+      - task: publish
+
+  pull:upstream:
+    desc: Pull from upstream repositories
+    summary: |
+      # Pull Changes from Upstream Repositories
+
+      This task will do a `git pull` on each repository defined in `.blueprint.upstreamRemotes`.
+      The variable should be an array of objects where each object has the `remote`, `url`, and `branch` keys.
+
+      **Sample value of `.blueprint.upstreamRemotes`:**
+      `[{ "remote": "ionic", "url": "git@github.com:ionic-team/ionic-docs.git", "branch": "main" }]`
+    log:
+      error: Encountered error while running `git pull` on each of the `upstreamRemotes`
+      start: Running `git pull` on each of the `upstreamRemotes`
+      success: Successfully pulled from `upstreamRemotes`
+    cmds:
+      - task: common:update:upstream:remotes:pull
+
+  repair:
+    cmds:
+      - |
+        TMP="$(mktemp)" && curl -sSL {{.MODEL_TASKFILE}} > "$TMP"
+        .config/log info 'Ensuring new additions to the model `Taskfile.yml` are present in the project `Taskfile.yml`'
+        yq eval-all -i 'select(fileIndex == 0) * select(fileIndex == 1)' "$TMP" Taskfile.yml
+      - |
+        if [ -n "$UPDATE_INIT_SCRIPT" ]; then
+          bash <(curl -sSL "$UPDATE_INIT_SCRIPT")
+        else
+          bash <(curl -sSL {{.INIT_SCRIPT}})
+        fi
+
   reset:
     desc: Resets the project by removing all caches and then re-generating templated files
     summary: |
@@ -399,6 +571,7 @@ tasks:
       updates, it re-generates any templated files.
     cmds:
       - task: common:reset
+
   reset:force:
     desc: 'Aggressively reset the project (**WARNING** This will wipe uncommitted work)'
     summary: |
@@ -417,6 +590,7 @@ tasks:
       answer:
         cmds:
           - task: common:reset:force
+
   scripts:
     interactive: true
     deps:
@@ -434,6 +608,7 @@ tasks:
       start: Running `NTL_RUNNER={{.NPM_PROGRAM}} {{.NPX_HANDLE}}ntl`
     cmds:
       - NTL_RUNNER={{.NPM_PROGRAM}} {{.NPX_HANDLE}}ntl
+
   services:
     desc: Update elements of the repository that require API access
     summary: |
@@ -446,6 +621,7 @@ tasks:
       - task: common:update:services
     status:
       - '[ -n "$GITLAB_CI" ] && [ "$REPOSITORY_UPDATE" != "true" ]'
+
   shell:
     desc: Start a terminal session using Docker with any Linux operating system
     compile: |
@@ -479,6 +655,7 @@ tasks:
       * ubuntu-21.04
     cmds:
       - task: common:shell
+
   start:
     desc: Set up the project and refresh it with the latest changes
     summary: |
@@ -499,8 +676,10 @@ tasks:
       success: Successfully synchronized the project with upstream file changes and also bootstrapped the project
     cmds:
       - task: upstream:shared
+
   test:
     deps:
+      - install:software:jq
       - install:software:node
     interactive: true
     desc: Open an interactive dialog to select and run a Molecule test
@@ -518,3 +697,19 @@ tasks:
         else
           [[ $- == *i* ]] && task prepare || (.config/log error '{{.NONINTERACTIVE_MISSING_TEST_CMD}}' && exit 1)
         fi
+
+  update:
+    desc: Update the repository
+    log:
+      error: Failed to update the repository
+      start: Updating the repository..
+      success: Finished updating the repository
+    cmds:
+      - task: :install:software:brew
+      - |
+        . "$HOME/.profile"
+        task update:prereqs
+        . "$HOME/.profile"
+        task update:init
+        task prepare
+        task update:finish
