--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,9 @@
+[build-system]
+build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+
 [tool.poetry]
-name = "common-shared"
-version = "0.0.1"
-description = "Includes common files used across different types of common file repositories (e.g. Go, Python, TypeScript, Go, more..)"
 authors = ["Brian Zalewski <brian@megabyte.space>"]
-license = "MIT"
-readme = "README.md"
-homepage = "https://megabyte.space"
-documentation = "https://megabyte.space/docs/common/shared"
-repository = "https://github.com/ProfessorManhattan/common-shared"
-keywords = ["common", "configurations", "files", "gitlab-ci", "mblabs", "megabytelabs", "npm", "package", "professormanhattan", "shared", "taskfiles", "washingtondc"]
-include = ["docs/CHANGELOG.md", "LICENSE"]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Development Status :: 5 - Production/Stable",
@@ -47,15 +41,36 @@ classifiers = [
   "Topic :: System :: Installation/Setup",
   "Topic :: Utilities"
 ]
+description = "Includes common files used across different types of common file repositories (e.g. Go, Python, TypeScript, Go, more..)"
+documentation = "https://megabyte.space/docs/common/shared"
+homepage = "https://megabyte.space"
+include = ["docs/CHANGELOG.md", "LICENSE"]
+keywords = [
+  "common",
+  "configurations",
+  "files",
+  "gitlab-ci",
+  "mblabs",
+  "megabytelabs",
+  "npm",
+  "package",
+  "professormanhattan",
+  "shared",
+  "taskfiles",
+  "washingtondc"
+]
+license = "MIT"
+name = "common-shared"
+readme = "README.md"
+repository = "https://github.com/ProfessorManhattan/common-shared"
+version = "0.0.1"
 
 [tool.poetry.dependencies]
-python = ">=3.10.0,<4.0.0"
-
-# Semantic Extras -> `poetry install -E semantic`
 pip = { version = "^21.3.0", optional = true }
+python = ">=3.10.0,<4.0.0"
 setuptools = { version = "^58.2.0", optional = true }
-twine = { version = "^3.4.2", optional = true }
-wheel = { version = "^0.37.0", optional = true }
+twine = { version = "^3.8.0", optional = true }
+wheel = { version = "^0.37.1", optional = true }
 
 [tool.poetry.dev-dependencies]
 blocklint = "^0.2.3"
@@ -65,21 +80,12 @@ toml-sort = "^0.19.0"
 yamllint = "^1.26.3"
 
 [tool.poetry.extras]
-semantic = [
-  "pip",
-  "setuptools",
-  "twine",
-  "wheel"
-]
+semantic = ["pip", "setuptools", "twine", "wheel"]
 
 [tool.poetry.urls]
 "Bug Tracker" = "https://gitlab.com/megabyte-labs/common/shared/-/issues"
-"GitHub" = "https://github.com/ProfessorManhattan/common-shared"
-"GitLab" = "https://gitlab.com/megabyte-labs/common/shared"
+GitHub = "https://github.com/ProfessorManhattan/common-shared"
+GitLab = "https://gitlab.com/megabyte-labs/common/shared"
 "Give Directly" = "https://givedirectly.org"
 "Open Collective" = "https://opencollective.com/megabytelabs"
-"Patreon" = "https://www.patreon.com/ProfessorManhattan"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+Patreon = "https://www.patreon.com/ProfessorManhattan"
