Update common/Taskfile.yml.liquid, common/.config/taskfiles/common/Taskfile.yml, common/.config/taskfiles/common/Taskfile-start.yml, common/.config/taskfiles/update/Taskfile.yml, common/.config/taskfiles/common/Taskfile-util.yml, common/start.sh, common/.config/taskfiles/common/Taskfile-update.yml, common/.config/taskfiles/git/Taskfile.yml, common/.config/taskfiles/git/Taskfile-gitlab.yml, common/.config/taskfiles/git/Taskfile-github.yml, common/.config/taskfiles/publish/Taskfile.yml

--- a/common/.config/taskfiles/common/Taskfile-util.yml
+++ b/common/.config/taskfiles/common/Taskfile-util.yml
@@ -69,7 +69,7 @@ tasks:
       success: Completed `Taskfile.yml` update logic for deps task named `deps:{{.TAG}}`
     cmds:
       - |
-        RESULT="  deps:{{.TAG}}:\n    deps:\n"
+        RESULT="  deps:run:parallel:\n    deps:\n"
         COUNT="0"
         jq -cr '(.. | select(.tags?[]? == "{{.TAG}}")) | ._task' {{.MAP_FILE}} | while read i; do
           COUNT="$(("$COUNT" + 1))"
