--- a/common/.config/taskfiles/common/Taskfile-util.yml
+++ b/common/.config/taskfiles/common/Taskfile-util.yml
@@ -9,6 +9,11 @@ tasks:
     deps:
       - :install:software:jq
       - :install:software:yq
+    vars:
+      MAP_FILE_QUERY: >-
+        [.includes | with_entries(select(.value.optional == true)) | to_entries | .[] |
+        { "key": .key, "value": .value.taskfile }] + (.includes | with_entries(select(.value.optional == null)) |
+        to_entries) + { "key": "", "value": "Taskfile.yml" }
     log:
       error: Encountered error while generating Taskfile task map array
       start: Generating Taskfile task map array
@@ -20,7 +25,7 @@ tasks:
         TMP_COMBINED="$(mktemp)"
         TMP_JQ="$(mktemp)"
         TMP_YQ="$(mktemp)"
-        yq -o=j '[.includes | with_entries(select(.value.optional == true)) | to_entries | .[] | { "key": .key, "value": .value.taskfile }] + (.includes | with_entries(select(.value.optional == null)) | to_entries) + { "key": "", "value": "Taskfile.yml" }' Taskfile.yml > "{{.MAP_FILE}}"
+        yq -o=j '{{.MAP_FILE_QUERY}}' Taskfile.yml > "{{.MAP_FILE}}"
         jq -c '.[]' "{{.MAP_FILE}}" | while read i; do
           PREFIX="$(jq -r '.key' < "$i")"
           FILE="$(jq -r '.value' "$i")"
