--- a/common/.config/taskfiles/common/Taskfile-start.yml
+++ b/common/.config/taskfiles/common/Taskfile-start.yml
@@ -20,7 +20,7 @@ tasks:
     cmds:
       - task: setup
     status:
-      - '[ -z $CI ]'
+      - '[ -z "$CI" ]'
 
   commit:
     cmds:
@@ -47,14 +47,13 @@ tasks:
     cmds:
       - task: setup
     status:
-      - '[ -n $CI ] || [ -f /.dockerenv ]'
+      - '[ -n "$CI" ] && [ -f /.dockerenv ]'
 
   docker:
     cmds:
       - task: docker:taskfile
     status:
-      - '[ -n $CI ]'
-      - '[ ! -f /.dockerenv ]'
+      - '[ -n "$CI" ] && [ ! -f /.dockerenv ]'
 
   docker:taskfile:
     cmds:
@@ -85,7 +84,7 @@ tasks:
           if type brew &> /dev/null; then
             echo "$PATH"
           else
-            . "$HOME/.profile"
+            . "$HOME/.profile" &> /dev/null
             echo "$PATH"
           fi
     log:
@@ -102,7 +101,7 @@ tasks:
   register:env:
     cmds:
       - |
-        . "$HOME/.profile"
+        . "$HOME/.profile" &> /dev/null
         echo "$PATH" > '{{.ENV_PATH}}'
         echo "$GOBIN" > '{{.ENV_GOBIN}}'
         echo "$GOROOT" > '{{.ENV_GOROOT}}'
@@ -117,7 +116,7 @@ tasks:
 
   setup:
     cmds:
-      - task: install:software:brew
+      - task: :install:software:brew
       - task: prereqs
       - task: register:env
         vars:
