--- a/common/.config/taskfiles/git/Taskfile-github.yml
+++ b/common/.config/taskfiles/git/Taskfile-github.yml
@@ -3,6 +3,7 @@ version: '3'
 
 tasks:
   create:
+    run: once
     deps:
       - :ci:commit:config
       - :install:software:gh
@@ -61,6 +62,7 @@ tasks:
       - '[[ "{{.CURRENT_PROJECT_ID}}" == "{{.PROJECT_ID}}" ]]'
 
   update:
+    run: once
     deps:
       - update:meta
       - ids
