--- a/common/.config/taskfiles/git/Taskfile-gitlab.yml
+++ b/common/.config/taskfiles/git/Taskfile-gitlab.yml
@@ -86,6 +86,7 @@ tasks:
         wait
 
   create:
+    run: once
     deps:
       - :install:software:glab
       - :install:software:jq
@@ -331,6 +332,7 @@ tasks:
         msg: The `GITLAB_TOKEN` environment variable must be set to run this task
 
   update:
+    run: once
     deps:
       - access-token
       - branches
