--- a/common/.config/taskfiles/ci/Taskfile.yml
+++ b/common/.config/taskfiles/ci/Taskfile.yml
@@ -151,14 +151,22 @@ tasks:
       start: Synchronizing the `synchronize` branch with the `master` branch
       success: Successfully updated the `synchronize` branch
     cmds:
+      - git fetch origin
       - git checkout -b synchronize || git checkout synchronize
       - git reset --hard HEAD
       - git pull -q origin master
-      - git push -q -o ci.skip origin synchronize --force
       - |
-        if [ "$GITLAB_CI" ]; then
-          .config/log info 'Triggering the `master` branch pipeline'
-          curl -s --request POST --form "token=${CI_JOB_TOKEN}" --form ref=master --form "variables[PIPELINE_SOURCE]=$PIPELINE_SOURCE" \
-            "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/trigger/pipeline"
+        git push -q -o ci.skip origin synchronize --force || FAILED_SYNC=$?
+        if [ -n "$FAILED_SYNC" ]; then
+          task git:gitlab:protected:off -- "synchronize"
+          git push -q -o ci.skip origin synchronize --force
         fi
+      - task: synchronize:gitlab
       - git checkout master
+
+  synchronize:gitlab:
+    cmds:
+      - curl -s --request POST --form "token=${CI_JOB_TOKEN}" --form ref=master --form "variables[PIPELINE_SOURCE]=$PIPELINE_SOURCE"
+        "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/trigger/pipeline"
+    status:
+      - '[ -z "$GITLAB_CI" ]'
