--- a/common/.config/taskfiles/install/Taskfile-gh.yml
+++ b/common/.config/taskfiles/install/Taskfile-gh.yml
@@ -120,6 +120,7 @@ tasks:
       PATTERNS: -p "Linux_x86_64" -p "*Linux_x86_64.tar.gz" -p "*Linux_amd64.tar.gz" -p "*linux_amd64" -p "*linux_amd64.tar.gz" -p "*linux-amd64" -p "*Linux-64bit.tar.gz" -p "*linux-x64" -p "*linux_x64.tar.gz" -p "*linux-x86_64"
       PATTERNS_GNU: -p "*x86_64-unknown-linux-gnu.tar.gz"
       PATTERNS_MUSL: -p "*x86_64-unknown-linux-musl.tar.gz"
+    env:
       TMP:
         sh: mktemp -d
     cmds:
