--- a/common/.config/taskfiles/common/Taskfile-update.yml
+++ b/common/.config/taskfiles/common/Taskfile-update.yml
@@ -294,7 +294,10 @@ tasks:
     cmds:
       - task: start
       - task: all
-      - task: ':{{if eq .REPOSITORY_TYPE "docker"}}docker:update:labels{{else}}donothing{{end}}'
+      - |
+        if [ -f Dockerfile ] || [ -f docker-compose.yml ] || [ -f docker-stack.yml ]; then
+          task {{if eq .REPOSITORY_TYPE "docker"}}docker:update:labels{{else}}donothing{{end}}
+        fi
 
   upstream:remotes:
     deps:
